--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -1,9 +1,7 @@
-<div class="ncl-edit-version-code ncl-version" data-igz-extend-background>
-    <div class="igz-scrollable-container"
-         data-ng-scrollbars
-         data-ng-scrollbars-config="$ctrl.scrollConfig">
+<div class="ncl-edit-version-code ncl-version">
+    <div class="igz-scrollable-container">
         <div class="ncl-edit-version-code-wrapper">
-            <form name="$ctrl.versionCodeForm">
+            <form name="$ctrl.versionCodeForm" class="ncl-edit-version-code-form">
                 <div class="section-wrapper code-entry-section">
                     <div class="code-entry-row">
                         <div class="code-entry-col code-entry-type-col">
