--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
@@ -9,25 +9,8 @@
                    data-ng-change="$ctrl.updateEnableStatus()">
             <label for="enable" class="checkbox-inline">Enabled</label>
         </div>
-        <div class="row">
-            <div class="namespace-block"
-                 data-ng-class="{'full-width': !$ctrl.isDemoMode()}">
-                <div class="label">
-                    Namespace
-                </div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
-                                            data-input-name="namespace"
-                                            data-input-value="$ctrl.version.metadata.namespace"
-                                            data-is-focused="false"
-                                            data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                            data-update-data-field="metadata.namespace"
-                                            data-form-object="$ctrl.basicSettingsForm"
-                                            data-validation-pattern="$ctrl.validationPatterns.name"
-                                            data-placeholder-text="Type a namespace..."></igz-validating-input-field>
-            </div>
-            <div data-ng-if="$ctrl.isDemoMode()"
-                 class="timeout-block">
+        <div class="row" data-ng-if="$ctrl.isDemoMode()">
+            <div class="timeout-block">
                 <div class="label">
                     <div class="timeout-checkbox">
                         <input type="checkbox" class="small" id="timeout" data-ng-model="$ctrl.enableTimeout">
