--- a/src/nuclio/projects/project/functions/create-function/function-import/function-import.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/function-import/function-import.tpl.html
@@ -1,13 +1,23 @@
 <div class="function-import-wrapper-content">
-    <div class="function-import-file-picker">
-        <label class="file-picker-wrapper ncl-primary-button" for="function-import">
-            <span class="igz-icon-upload"></span>Import
-        </label>
-        <input class="function-import-input"
-               type="file"
-               id="function-import"
-               accept=".yml, .yaml">
-    </div>
+    <form name="$ctrl.functionImportForm" class="function-import-form" novalidate>
+        <div class="projects-drop-down" data-ng-if="$ctrl.isProjectsDropDownVisible()">
+            <span class="input-label">Project*</span>
+            <igz-default-dropdown data-is-required="true"
+                                  data-values-array="$ctrl.projectsList"
+                                  data-item-select-callback="$ctrl.onProjectChange(item, isItemChanged)"
+                                  data-form-object="$ctrl.functionImportForm"
+                                  data-input-name="project"></igz-default-dropdown>
+        </div>
+        <div class="function-import-file-picker">
+            <label class="file-picker-wrapper ncl-primary-button" for="function-import">
+                <span class="igz-icon-upload"></span>Import
+            </label>
+            <input class="function-import-input"
+                   type="file"
+                   id="function-import"
+                   accept=".yml, .yaml">
+        </div>
+    </form>
 
     <div class="function-import-monaco">
         <ncl-monaco class="monaco-code-editor"
@@ -22,7 +32,7 @@
         <button class="ncl-secondary-button" data-ng-click="$ctrl.cancelCreating($event)">CANCEL</button>
         <button class="ncl-primary-button" data-ng-click="$ctrl.createFunction()"
                 data-ng-disabled="!$ctrl.isSourceCodeExists()"
-                data-ng-class="{'disabled': !$ctrl.isSourceCodeExists()}">CREATE FUNCTION
+                data-ng-class="{'disabled': !$ctrl.isCreateFunctionAllowed()}">CREATE FUNCTION
         </button>
     </div>
 </div>
