--- a/src/nuclio/projects/projects.tpl.html
+++ b/src/nuclio/projects/projects.tpl.html
@@ -14,6 +14,10 @@
                         data-ng-click="$ctrl.openNewProjectDialog()">
                     Create project
                 </button>
+                <button class="ncl-new-entity-button"
+                        data-ng-click="$ctrl.createFunction()">
+                    Create function
+                </button>
             </div>
             <div class="actions-bar-left actions-content-block">
                 <div class="igz-action-panel">
