--- a/src/nuclio/projects/project/functions/create-function/create-function.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/create-function.tpl.html
@@ -61,18 +61,21 @@
         <div class="new-function-type-content">
             <ncl-function-from-scratch data-ng-if="$ctrl.isTypeSelected('from_scratch')"
                                        data-toggle-splash-screen="$ctrl.toggleSplashScreen(value)"
-                                       data-project="$ctrl.project">
+                                       data-project="$ctrl.project"
+                                       data-projects="$ctrl.projects">
             </ncl-function-from-scratch>
 
             <ncl-function-from-template data-ng-if="$ctrl.isTypeSelected('from_template')"
                                         data-get-function-templates="$ctrl.getTemplates()"
                                         data-templates="$ctrl.templates"
                                         data-toggle-splash-screen="$ctrl.toggleSplashScreen(value)"
-                                        data-project="$ctrl.project">
+                                        data-project="$ctrl.project"
+                                        data-projects="$ctrl.projects">
             </ncl-function-from-template>
             <ncl-function-import data-ng-if="$ctrl.isTypeSelected('import')"
                                  data-toggle-splash-screen="$ctrl.toggleSplashScreen(value)"
-                                 data-project="$ctrl.project">
+                                 data-project="$ctrl.project"
+                                 data-projects="$ctrl.projects">
             </ncl-function-import>
         </div>
     </div>
