--- a/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.tpl.html
@@ -1,6 +1,14 @@
 <div class="function-from-template-content">
     <form name="$ctrl.functionFromTemplateForm" class="configuration-form" novalidate>
         <div class="function-name-wrapper">
+            <div class="projects-drop-down" data-ng-if="$ctrl.isProjectsDropDownVisible()">
+                <span class="input-label">Project*</span>
+                <igz-default-dropdown data-is-required="true"
+                                      data-values-array="$ctrl.projectsList"
+                                      data-item-select-callback="$ctrl.onProjectChange(item, isItemChanged)"
+                                      data-form-object="$ctrl.functionFromTemplateForm"
+                                      data-input-name="project"></igz-default-dropdown>
+            </div>
             <div class="function-name">
                 <span class="input-label">Name*</span>
                 <igz-validating-input-field class="nuclio-validating-input"
