[Nuclio] Create new function import broken

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -66,7 +66,7 @@
                                 data-function-source-code="$ctrl.sourceCode"
                                 data-mini-monaco="false"
                                 data-selected-theme="$ctrl.selectedTheme.id"
-                                data-language="$ctrl.selectedRuntime.language"
+                                data-language="$ctrl.editorLanguage"
                                 data-on-change-source-code-callback="$ctrl.onChangeSourceCode(sourceCode, language)"
                                 data-read-only="false"></ncl-monaco>
                 </div>
