--- a/src/nuclio/projects/project/functions/create-function/function-import/function-import.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/function-import/function-import.tpl.html
@@ -4,9 +4,13 @@
             <span class="input-label">Project*</span>
             <igz-default-dropdown data-is-required="true"
                                   data-values-array="$ctrl.projectsList"
+                                  data-selected-item="$ctrl.selectedProject"
                                   data-item-select-callback="$ctrl.onProjectChange(item, isItemChanged)"
                                   data-form-object="$ctrl.functionImportForm"
-                                  data-input-name="project"></igz-default-dropdown>
+                                  data-input-name="project">
+                <div class="transcluded-item"
+                     data-ng-click="$ctrl.createNewProject()">New project</div>
+            </igz-default-dropdown>
         </div>
         <div class="function-import-file-picker">
             <label class="file-picker-wrapper ncl-primary-button" for="function-import">
