[General] Upgrade to latest ui-bootstrap

--- a/src/nuclio/projects/project/functions/create-function/function-from-scratch/function-from-scratch.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/function-from-scratch/function-from-scratch.tpl.html
@@ -32,7 +32,7 @@
                                                 data-form-object="$ctrl.functionFromScratchForm"
                                                 data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                                 data-placeholder-text="Type function name"
-                                                data-tooltip="Name must be 1-63 characters long, consisting of digits, lower-case letters and hyphens only. It cannot start or end with a hyphen."
+                                                data-uib-tooltip="Name must be 1-63 characters long, consisting of digits, lower-case letters and hyphens only. It cannot start or end with a hyphen."
                                                 data-tooltip-popup-delay="500"
                                                 data-tooltip-append-to-body="true"></igz-validating-input-field>
                 </div>
