--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-logs/test-events-logs.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-logs/test-events-logs.tpl.html
@@ -3,13 +3,13 @@
          data-ng-if="$ctrl.logs.length > 0">
         <div class="ncl-icon-expand-all"
              data-ng-click="$ctrl.expandAllRows(true)"
-             data-tooltip="Expand all"
+             data-uib-tooltip="Expand all"
              data-tooltip-popup-delay="300"
              data-tooltip-placement="left"
              data-tooltip-append-to-body="true"></div>
         <div class="ncl-icon-collapse-all"
              data-ng-click="$ctrl.expandAllRows(false)"
-             data-tooltip="Collapse all"
+             data-uib-tooltip="Collapse all"
              data-tooltip-popup-delay="300"
              data-tooltip-placement="left"
              data-tooltip-append-to-body="true"></div>
