--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -39,7 +39,7 @@
                                            data-sort-options="$ctrl.sortOptions"
                                            data-reverse-sorting="$ctrl.isReverseSorting"
                                            data-update-data-callback="$ctrl.onSortOptionsChange"
-                                           data-tooltip="Sort"
+                                           data-uib-tooltip="Sort"
                                            data-tooltip-append-to-body="true"
                                            data-tooltip-placement="top">
                         </igz-sort-dropdown>
