--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -76,7 +76,7 @@
                             </span>
                             <div class="progress">
                                 <div class="progress-bar"
-                                     role="progressbar"
+                                     role="uib-progressbar"
                                      aria-valuemin="0"
                                      aria-valuemax="100"
                                      data-ng-style="{'width': $ctrl.getFileConfig().progress}">
