expand/collapse test-pane

--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
@@ -1,5 +1,5 @@
 <div class="test-events-pane"
-     data-ng-class="{'fixed-left-bar': $ctrl.fixedLeftBar}">
+     data-ng-class="{'fixed-left-bar': $ctrl.fixedLeftBar, 'test-pane-closed': $ctrl.isTestPaneClosed}">
     <igz-splash-screen data-is-splash-showed="$ctrl.isSplashShowed"></igz-splash-screen>
     <div data-ng-class="{'visible': $ctrl.showLeftBar}"
          class="left-bar">
