added missed collapse/expand test pane icon

--- a/src/nuclio/projects/project/functions/version/version.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version.tpl.html
@@ -50,6 +50,6 @@
         </div>
     </div>
 
-    <ncl-navigation-tabs class="igz-component" data-tab-items="$ctrl.navigationTabsConfig" data-version="$ctrl.version"></ncl-navigation-tabs>
+    <ncl-navigation-tabs data-tab-items="$ctrl.navigationTabsConfig" data-version="$ctrl.version"></ncl-navigation-tabs>
     <section class="ncl-edit-version-view" data-igz-extend-background data-ui-view="version"></section>
 </div>
