--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -1,5 +1,6 @@
 <div class="ncl-edit-version-code ncl-version">
-    <div class="igz-scrollable-container">
+    <div class="igz-scrollable-container"
+         data-ng-scrollbars data-ng-scrollbars-config="$ctrl.scrollConfigHorizontal">
         <div class="ncl-edit-version-code-wrapper">
             <form name="$ctrl.versionCodeForm" class="ncl-edit-version-code-form">
                 <div class="section-wrapper code-entry-section">
