added Volumes pane

--- a/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
@@ -52,6 +52,13 @@
                         data-version="$ctrl.version"
                         data-on-change-callback="$ctrl.onConfigurationChangeCallback"></ncl-version-configuration-runtime-attributes>
             </div>
+            <div class="row">
+                <ncl-version-configuration-volumes
+                        class="configuration-block"
+                        data-version="$ctrl.version"
+                        data-on-change-callback="$ctrl.onConfigurationChangeCallback">
+                </ncl-version-configuration-volumes>
+            </div>
         </div>
     </div>
 </div>
