--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -74,15 +74,29 @@
             </div>
             <div class="igz-col-100 build-field"
                  data-ng-if="$ctrl.version.spec.runtime === 'java'">
-                <div class="field-label">Dependencies</div>
+                <div class="field-label">Repositories</div>
                 <igz-validating-input-field data-field-type="textarea"
-                                            data-input-name="dependencies"
-                                            data-input-value="$ctrl.build.dependencies"
+                                            data-input-name="repositories"
+                                            data-input-value="$ctrl.build.runtimeAttributes.repositories"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.buildForm"
                                             data-placeholder-text="Type ..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                            data-update-data-field="dependencies"
+                                            data-update-data-field="runtimeAttributes.repositories"
+                                            class="nuclio-validating-input build-dependencies-field">
+                </igz-validating-input-field>
+            </div>
+            <div class="igz-col-100 build-field"
+                 data-ng-if="$ctrl.version.spec.runtime === 'java'">
+                <div class="field-label">Dependencies</div>
+                <igz-validating-input-field data-field-type="textarea"
+                                            data-input-name="dependencies"
+                                            data-input-value="$ctrl.build.runtimeAttributes.dependencies"
+                                            data-is-focused="false"
+                                            data-form-object="$ctrl.buildForm"
+                                            data-placeholder-text="Type ..."
+                                            data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                            data-update-data-field="runtimeAttributes.dependencies"
                                             class="nuclio-validating-input build-dependencies-field">
                 </igz-validating-input-field>
             </div>
